--- a/app/src/main/res/drawable/my_location_button_background.xml
+++ b/app/src/main/res/drawable/my_location_button_background.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape
-
-
-            >
-            <corners android:radius="2dp" />
-            <solid android:color="@color/whiteTransparent75" />
-        </shape>
-    </item>
-    <item
-        android:drawable="@drawable/my_location_button"
+<item>
+    <shape
         >
-    </item>
+        <corners android:radius="2dp" />
+        <solid android:color="@color/whiteTransparent75" />
+    </shape>
+</item>
+<item
+    android:drawable="@drawable/ic_my_location"
+    android:width="30dp"
+    android:height="30dp"
+    android:bottom="3dp"
+    android:top="3dp"
+    android:left="3dp"
+    android:right="3dp"
+    >
+</item>
 </layer-list>
