--- a/app/src/main/res/layout/activity_nearby_places.xml
+++ b/app/src/main/res/layout/activity_nearby_places.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context=".ui.nearby.NearbyPlaces">
+    tools:context=".ui.nearby.NearbyPlacesActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
