--- a/app/src/main/res/layout/fragment_place_detail.xml
+++ b/app/src/main/res/layout/fragment_place_detail.xml
@@ -1,14 +1,215 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorWhiteDarkMaterial"
     tools:context=".ui.nearby.placeDetails.PlaceDetailFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        >
 
-</FrameLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/header"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent">
+
+
+                <ImageView
+                    android:id="@+id/icon"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/name"
+                    app:layout_constraintBottom_toBottomOf="@id/name"
+                    android:padding="10dp"
+                    />
+
+                <TextView
+                    android:id="@+id/name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:paddingEnd="20dp"
+                    android:textColor="@color/colorDark"
+                    android:textSize="25sp"
+                    android:textStyle="bold"
+                    app:layout_constraintHorizontal_bias="0.128"
+                    app:layout_constraintLeft_toRightOf="@id/icon"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <ImageView
+                android:id="@+id/photo_1"
+                app:layout_constraintTop_toBottomOf="@id/header"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="invisible"
+                android:adjustViewBounds="true"
+                android:scaleType="fitXY"
+                />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/search_result_layout"
+                android:layout_width="match_parent"
+                app:layout_constraintTop_toBottomOf="@id/photo_1"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                >
+
+                <TextView
+                    android:id="@+id/searching_result_textview"
+                    android:layout_width="match_parent"
+                    android:textAlignment="center"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:textStyle="bold"
+                    android:textSize="19sp"
+                    android:text="@string/place_searching_result" />
+
+                <LinearLayout
+                    android:id="@+id/link_buttons"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintTop_toBottomOf="@id/searching_result_textview"
+                    >
+
+<!--                    przyciski dodawane w kodzie-->
+<!--                        <com.google.android.material.button.MaterialButton-->
+<!--                        android:layout_width="match_parent"-->
+<!--                       android:layout_height="wrap_content"-->
+<!--                       style="@style/Widget.MaterialComponents.Button.OutlinedButton"-->
+<!--                       app:cornerRadius="10dp"-->
+<!--                       app:strokeColor="@color/colorPrimaryDark"-->
+<!--                       android:text="result"-->
+<!--                       />-->
+
+                </LinearLayout>
+                <include layout="@layout/progress_bar"
+                    app:layout_constraintTop_toBottomOf="@id/searching_result_textview"
+                    />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+            <fragment
+                android:id="@+id/map"
+                android:name="com.google.android.gms.maps.SupportMapFragment"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:fitsSystemWindows="true"
+                app:layout_constraintTop_toBottomOf="@id/search_result_layout"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:id="@+id/rating"
+                android:textStyle="bold"
+                android:textSize="19sp"
+                app:layout_constraintTop_toBottomOf="@id/map"
+                app:layout_constraintLeft_toLeftOf="parent"
+                />
+
+            <ImageView
+                android:id="@+id/photo_2"
+                android:layout_marginTop="15dp"
+                app:layout_constraintTop_toBottomOf="@id/rating"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="invisible"
+                android:adjustViewBounds="true"
+                android:scaleType="fitXY"
+                />
+
+            <ImageView
+                android:id="@+id/photo_3"
+                app:layout_constraintTop_toBottomOf="@id/photo_2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="invisible"
+                android:adjustViewBounds="true"
+                android:scaleType="fitXY"
+                />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/contact_data"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:background="@color/grey"
+                app:layout_constraintTop_toBottomOf="@id/photo_3"
+                >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/contact_data_title"
+                    android:text="Dane kontaktowe: "
+                    android:textStyle="bold"
+                    android:textSize="19sp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    />
+
+                <TextView
+                    android:id="@+id/address"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Beszowa 46"
+                    app:layout_constraintTop_toBottomOf="@id/contact_data_title"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:textStyle="italic"
+                    android:textSize="16sp"
+                    />
+
+                <TextView
+                    android:id="@+id/website"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="beszowa.wp.pl"
+                    app:layout_constraintTop_toBottomOf="@id/address"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:textSize="16sp"
+                    android:textStyle="italic" />
+
+                <TextView
+                    android:id="@+id/phone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="123456789"
+                    app:layout_constraintTop_toBottomOf="@id/website"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:textSize="16sp"
+                    android:textStyle="italic" />
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:src="@drawable/ic_add_location"
+        android:layout_margin="30dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        />
+</RelativeLayout>
