--- a/app/src/main/res/layout/place_detail_dialog.xml
+++ b/app/src/main/res/layout/place_detail_dialog.xml
@@ -35,54 +35,60 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/nested_scroll_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="none"
-        android:padding="10dp"
-        android:layout_gravity="center_horizontal|center_vertical"
-        >
+   <RelativeLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
+       <androidx.core.widget.NestedScrollView
+           android:id="@+id/nested_scroll_view"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:scrollbars="none"
+           android:padding="10dp"
+           android:layout_gravity="center_horizontal|center_vertical"
+           >
 
-        <TextView
-            android:id="@+id/text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Full screen dialog" />
+           <LinearLayout
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:orientation="vertical"
+               >
 
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:scaleType="fitXY"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            />
+               <LinearLayout
+                   android:id="@+id/description"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:orientation="vertical">
 
-        <include layout="@layout/divider" />
+               </LinearLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/link" />
+               <ImageView
+                   android:id="@+id/image"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:adjustViewBounds="true"
+                   android:scaleType="fitXY"
+                   android:layout_marginTop="10dp"
+                   android:layout_marginBottom="10dp"
+                   />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/date" />
+               <include layout="@layout/divider" />
 
-        <include layout="@layout/progress_bar" />
+               <TextView
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:id="@+id/link" />
 
-    </LinearLayout>
+               <TextView
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:id="@+id/date" />
 
-    </androidx.core.widget.NestedScrollView>
+           </LinearLayout>
 
+       </androidx.core.widget.NestedScrollView>
+   </RelativeLayout>
+
+    <include layout="@layout/progress_bar" />
 
 </LinearLayout>
