Dodanie miejsc w pobliżu dla wszystkich punktów wycieczki Dodanie listenera do listview który po kliknięciu itemu dodaje go do punktów wycieczki Dodanie listenera do listview waypointów ywcieczki który po kliknięciu itemy usuwa go Dodanie aktywności z wycieczką w której możemy edytować aktualnie wybraną wycieczkę, jeśli jesteśmy jeje autorem

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -11,4 +11,10 @@
         android:layout_height="wrap_content"
         android:text="Icon made by Freepik from www.flaticon.com" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Icon made by Eucalyp from www.flaticon.com" />
+
+
 </LinearLayout>
