--- a/app/src/main/res/layout/item_nearby_place.xml
+++ b/app/src/main/res/layout/item_nearby_place.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_margin="4dp"
@@ -10,7 +11,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/background_gradient"
+        android:background="@drawable/trip_item_background"
         android:minHeight="?listPreferredItemHeightLarge">
 
         <ImageView
@@ -101,11 +102,24 @@
                 android:id="@+id/rating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:isIndicator="true"
                 android:numStars="5"
+                android:scaleX="0.7"
+                android:scaleY="0.7"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/types"
 
                 />
+
+            <ImageButton
+                android:id="@+id/navigate_to_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="36dp"
+                android:background="@color/transparent"
+                android:src="@drawable/ic_navigate_to"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/rating" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
