--- a/app/src/main/res/layout/fragment_nearby_places_main.xml
+++ b/app/src/main/res/layout/fragment_nearby_places_main.xml
@@ -33,7 +33,8 @@
             android:text="@string/no_places"
             android:textStyle="bold"
             android:textSize="40sp"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            />
 
 
     </RelativeLayout>
