--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,34 +1,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:aapt="http://schemas.android.com/aapt"
-        android:width="108dp"
-        android:height="108dp"
-        android:viewportHeight="108"
-        android:viewportWidth="108">
-    <path
-            android:fillType="evenOdd"
-            android:pathData="M32,64C32,64 38.39,52.99 44.13,50.95C51.37,48.37 70.14,49.57 70.14,49.57L108.26,87.69L108,109.01L75.97,107.97L32,64Z"
-            android:strokeColor="#00000000"
-            android:strokeWidth="1">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                    android:endX="78.5885"
-                    android:endY="90.9159"
-                    android:startX="48.7653"
-                    android:startY="61.0927"
-                    android:type="linear">
-                <item
-                        android:color="#44000000"
-                        android:offset="0.0"/>
-                <item
-                        android:color="#00000000"
-                        android:offset="1.0"/>
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-            android:fillColor="#FFFFFF"
-            android:fillType="nonZero"
-            android:pathData="M66.94,46.02L66.94,46.02C72.44,50.07 76,56.61 76,64L32,64C32,56.61 35.56,50.11 40.98,46.06L36.18,41.19C35.45,40.45 35.45,39.3 36.18,38.56C36.91,37.81 38.05,37.81 38.78,38.56L44.25,44.05C47.18,42.57 50.48,41.71 54,41.71C57.48,41.71 60.78,42.57 63.68,44.05L69.11,38.56C69.84,37.81 70.98,37.81 71.71,38.56C72.44,39.3 72.44,40.45 71.71,41.19L66.94,46.02ZM62.94,56.92C64.08,56.92 65,56.01 65,54.88C65,53.76 64.08,52.85 62.94,52.85C61.8,52.85 60.88,53.76 60.88,54.88C60.88,56.01 61.8,56.92 62.94,56.92ZM45.06,56.92C46.2,56.92 47.13,56.01 47.13,54.88C47.13,53.76 46.2,52.85 45.06,52.85C43.92,52.85 43,53.76 43,54.88C43,56.01 43.92,56.92 45.06,56.92Z"
-            android:strokeColor="#00000000"
-            android:strokeWidth="1"/>
+    android:width="108dp"
+    android:height="108dp"
+    android:viewportWidth="960.01"
+    android:viewportHeight="960.01">
+  <group android:translateX="288.003"
+      android:translateY="288.003">
+      <path android:fillColor="#FFFFFF" android:pathData="M271.354,368.004l70.4,0l-149.752,-284.8l-149.76,284.8l71.512,0z"/>
+      <path android:fillColor="#00FFB0" android:pathData="M202.002,227.924l-18.8,0l-69.44,140.08l157.6,0z"/>
+      <path android:fillColor="#000A64" android:pathData="M368.002,352.004h-16.576l-141.344,-268.8l31.44,-59.752c4.112,-7.824 1.112,-17.496 -6.712,-21.608c-7.808,-4.112 -17.496,-1.12 -21.608,6.712l-21.2,40.288l-21.2,-40.288c-4.12,-7.824 -13.8,-10.816 -21.608,-6.712c-7.816,4.12 -10.824,13.792 -6.712,21.608l31.44,59.752l-141.344,268.8H16.002c-8.84,0 -16,7.168 -16,16s7.16,16 16,16h26.24h71.52h157.6h70.4h26.24c8.832,0 16,-7.168 16,-16S376.834,352.004 368.002,352.004zM245.586,352.004H139.554l53.048,-107.008L245.586,352.004zM281.298,352.004l-64.952,-131.176c-2.696,-5.448 -8.256,-8.896 -14.336,-8.896h-18.808c-6.08,0 -11.64,3.448 -14.336,8.896l-65.032,131.176H68.73L192.002,117.58l123.272,234.424H281.298z"/>
+  </group>
 </vector>
