Dodanie Splash Screen

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -79,6 +79,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Icon made by Icon Pond from www.flaticon.com" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Icon made by Vitaly Gorbachev from www.flaticon.com" />
     </LinearLayout>
 
     </LinearLayout>
