--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,4 +43,8 @@
         <item name="android:windowIsFloating">false</item>
     </style>
 
+    <style name="Launcher" parent="AppTheme.StatusBar.Transparent">
+        <item name="android:windowBackground">@drawable/splash_screen_drawable</item>
+    </style>
+
 </resources>
